Change switch, and fix binance & pagomiscuentas